--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "3rd/nlohmann_json"]
 	path = 3rd/nlohmann_json
-	url = https://github.com/wilson/json.git
+	url = git@github.com:wilsonloo/json.git
