nv21 文件输入到当前程序的nv21.tmp.dir目录，并且在编译结束发布时尝试创建

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)		#指定cmake版本
 project(faceEmotionCppLinux)				#指定项目的名称，一般和项目的文件夹名称对应
 
 set(CMAKE_CXX_STANDARD 11)				#设置c++标准
+set(CMAKE_BUILD_TYPE Debug)
+SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb") #debug模式下开启-g选项
 
 # Typically you don't care so much for a third party library's tests to be
 # run from your own project's code.
@@ -54,4 +56,5 @@ add_custom_command(TARGET register POST_BUILD
             COMMAND cp register ${CMAKE_CURRENT_BINARY_DIR}/../bin
             COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/lib/libarcsoft_face.so ${CMAKE_CURRENT_BINARY_DIR}/../bin
             COMMAND cp ${CMAKE_CURRENT_SOURCE_DIR}/lib/libarcsoft_face_engine.so ${CMAKE_CURRENT_BINARY_DIR}/../bin
+            COMMAND mkdir -p ${CMAKE_CURRENT_BINARY_DIR}/../bin/nv21.tmp.dir
         )
