完成了表情的识别分类，正确率达到0.9367088607594937 规模为79

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ pythonUsage/nv21.tmp.dir/
 pythonUsage/.ipynb_checkpoints/
 pythonUsage/__pycache__/
 pythonUsage/logs/
+pythonUsage/ArcFace64.dat
 3rd/opencv
