--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 res/rawFaceEmotionImages.zip filter=lfs diff=lfs merge=lfs -text
+pythonUsage/emotion.model filter=lfs diff=lfs merge=lfs -text
+pythonUsage/emotion.tflite filter=lfs diff=lfs merge=lfs -text
