--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 res/rawFaceEmotionImages.zip filter=lfs diff=lfs merge=lfs -text
+pythonUsage/emotion.model.mobilenetV2_x75_0.92_20200907.tflite filter=lfs diff=lfs merge=lfs -text
+pythonUsage/emotion.model.mobilenetV2_x75_1.00_20200913 filter=lfs diff=lfs merge=lfs -text
+pythonUsage/emotion.model/saved_model.pb filter=lfs diff=lfs merge=lfs -text
